# tigerbeetle-unofficial

./: .editorconfig  .gitignore  CHANGELOG.md  CONTIBUTING.md  CONTRIBUTING.md  Cargo.toml  README.md  notify_completion_log.patch  rust-toolchain.toml
.github/: upgrade-ver.sh
.github/workflow/: ci.yml
.github/workflows/: check-new-ver.yml  ci.yml
core/: Cargo.toml
core/examples/: c_port_low_level.rs
core/src/: account.rs  callback.rs  error.rs  handle.rs  lib.rs  packet.rs  query_filter.rs  transfer.rs  util.rs
core/src/account/: balance.rs  filter.rs  mod.rs
core/src/util/: owned_slice.rs
examples/: c_port_high_level.rs
src/: id.rs  lib.rs  reply.rs
sys/: Cargo.toml  build.rs
sys/src/: lib.rs
