[package]
name = "tigerbeetle-unofficial"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version.workspace = true
description = "Safe high level async bindings to tigerbeetle client library."
repository.workspace = true
license.workspace = true
categories = ["api-bindings", "asynchronous", "database", "finance"]
include = ["/src/**", "/examples/**", "/Cargo.toml", "/LICENSE-*", "README.md", "CHANGELOG.md"]

[features]
tokio-rt-multi-thread = ["core/tokio-rt-multi-thread"]

[dependencies]
bytemuck = { version = "1.16", features = ["extern_crate_alloc"] }
core = { version = "=0.12.3+0.16.46", package = "tigerbeetle-unofficial-core", path = "core" }
fastrand = "2.3"
tokio = { version = "1.28.1", features = ["sync"] }

[dev-dependencies]
pollster = { version = "0.4", features = ["macro"] }

[workspace]
members = ["sys", "core"]

[workspace.package]
version = "0.12.3+0.16.46"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
rust-version = "1.78"
repository = "https://github.com/tigerbeetle-rust/tigerbeetle-unofficial"
license = "Apache-2.0"
