[package]
name = "tigerbeetle-unofficial-core"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version.workspace = true
description = "Safe low level callback-based async bindings to tigerbeetle client library."
repository.workspace = true
license.workspace = true
categories = ["api-bindings", "asynchronous", "database", "finance"]
include = ["/src/**", "/examples/**", "/Cargo.toml", "/LICENSE-*", "/README"]

[features]
tokio = ["dep:tokio"]
tokio-rt-multi-thread = ["dep:tokio", "tokio/rt-multi-thread"]

[dependencies]
bytemuck = "1.19"
sptr = "0.3.2"
sys = { version = "0.4.1", package = "tigerbeetle-unofficial-sys", path = "../sys", features = ["generated-safe"] }
tokio = { version = "1.0", optional = true }
