[package]
name = "tigerbeetle-unofficial-sys"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version.workspace = true
description = "Native bindings to the tigerbeetle library"
repository.workspace = true
license.workspace = true
categories = ["external-ffi-bindings"]

[features]
generated-safe = []

[dependencies]
bitflags = "2.6"
bytemuck = { version = "1.19", features = ["derive", "min_const_generics"] }

[build-dependencies]
bindgen = "0.71"
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", features = ["parsing", "full", "printing", "visit"], default-features = false }
